[package]
name = "thlibeiaovox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "thlibeiaovox"
path = "src/test.rs"

[build-dependencies]
autocxx-build = "0.27.0"
miette = { version = "5", features = ["fancy"] }

[dependencies]
autocxx = "0.27.0"
bvh-arena = "1.1.3"
cxx = "1.0"
wasm-bindgen = "0.2.95"
