[package]
name = "thlibeiaovox"
version = "0.1.0"
edition = "2021"

[lib]
name = "thlibeiaovox_lib"
crate-type = ["cdylib","rlib"]
path = "src/lib.rs"

[[bin]]
name = "thlibeiaovox"
path = "src/main.rs"

[build-dependencies]
autocxx-build = "0.27.0"
miette = { version = "5", features = ["fancy"] }

[dependencies]
autocxx = "0.27.0"
bvh-arena = "1.1.3"
cxx = "1.0"
grid-tree = "0.2.0"
wasm-bindgen = "0.2.95"
